--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/haptics": "^5.0.0",
     "@capacitor/keyboard": "^5.0.0",
     "@capacitor/status-bar": "^5.0.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "angularx-qrcode": "^18.0.2",
